--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,6 +46,25 @@ button {
   transition: border-color 0.25s;
 }
 
+table {
+  width: 100%;
+  margin-top: 10px;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+thead {
+  background-color: #f2f2f2;
+  color: black;
+}
+tr{
+  transition: 0.2s;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
