--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -56,8 +56,11 @@ th, td {
   padding: 8px;
   text-align: left;
   border-bottom: 1px solid #ddd;
+  text-align: center;
 }
-
+td{
+  width: 300px;
+}
 thead {
   background-color: #f2f2f2;
   color: black;
